# cpp-cnn

./: .gitignore  CMakeLists.txt  README.md  cnn.cpp  cnn.hpp  conv_layer.hpp  conv_layer_test.cpp  convolution_layer.hpp  cross_entropy_loss_layer.hpp  cross_entropy_loss_layer_test.cpp  dense_layer.hpp  dense_layer_test.cpp  integration_test.cpp  le_net.cpp  max_pooling_layer.hpp  max_pooling_layer_test.cpp  relu_layer_test.cpp  softmax_layer_test.cpp  test.cpp
best-results/: results_epoch_8.csv
layers/: cross_entropy_loss_layer.hpp  dense_layer.hpp  max_pooling_layer.hpp  relu_layer.hpp  softmax_layer.hpp
tests/: convolution_layer_test.cpp  cross_entropy_loss_layer_test.cpp  dense_layer_test.cpp  integration_test.cpp  max_pooling_layer_test.cpp  mnist_test.cpp  relu_layer_test.cpp  softmax_layer_test.cpp
utils/: mnist.hpp
